Update views table

--- a/public/theme/css/style.css
+++ b/public/theme/css/style.css
@@ -1376,7 +1376,7 @@ dt {
 
 /******* Page Title *******/
 .page-title-box {
-  padding: 20px 0px;
+  padding: 10px 0px 0px 0px;
 }
 
 .page-title-box .page-title {
