--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -48,7 +48,7 @@
 }
 
 .to-do-list{
-    min-height: 50px;
+    min-height: 60px;
     margin: auto;
     background-color: #CCCCCC;
     border-radius: 5px;
@@ -83,3 +83,10 @@
 #create-todo-form input{
     margin-bottom: 5px;
 }
+
+.user-card{
+    padding: 10px 10px 0px 10px;
+    margin: 0px 0px 20px 0px;
+    height: 110px;
+}
+
